--- a/Content/Calendar.htm
+++ b/Content/Calendar.htm
@@ -1252,7 +1252,7 @@
                         <p class="TableText">Oct 2019</p>
                     </td>
                     <td class="TableStyle-ADD_Help_Tables-BodyA-Column1-Body1">
-                        <p class="TableText">TBD</p>
+                        <p class="TableText">To Be Determined</p>
                     </td>
                 </tr>
             </tbody>
