--- a/Content/Calendar.htm
+++ b/Content/Calendar.htm
@@ -572,7 +572,7 @@
                         <p class="TableText">Sep 2022</p>
                     </td>
                     <td class="TableStyle-ADD_Help_Tables-BodyE-Column1-Body1">
-                        <p class="TableText">Unknown</p>
+                        <p class="TableText">TBD</p>
                     </td>
                     <td class="TableStyle-ADD_Help_Tables-BodyD-Column1-Body1">
                         <p class="TableText">TBD</p>
